objects/ccpt__Rating_Item__c.object
<CustomObject>
    <fields>
        <fullName>ccpt__Rating_Category__c</fullName>
        <label>Rating Category</label>
        <picklist>
            <picklistValues>
                <fullName>Meeting</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ccpt__Rating_Type__c</fullName>
        <label>Rating Type</label>
        <picklist>
            <controllingField>ccpt__Rating_Category__c</controllingField>
            <picklistValues>
                <fullName>Punctuality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Preparedness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contribution</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ccpt__Rating__c</fullName>
        <label>Rating</label>
        <referenceTo>ccpt__Rating__c</referenceTo>
        <relationshipLabel>Rating Items</relationshipLabel>
        <relationshipName>Rating_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ccpt__Score__c</fullName>
        <label>Score</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Rating Item</label>
    <nameField>
        <displayFormat>RI-{0000000000}</displayFormat>
        <label>Rating Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rating Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>